--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
 <html>
     <head>
         <b>Hello! Please allow access to the clipboard, and we'll copy the timezone for you!</b>
     </head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script>
-        var _0x16e0=['readText','clipboard','resolvedOptions','DateTimeFormat','timeZone','then','writeText'];(function(_0x59b788,_0x16e000){var _0x5cc171=function(_0x25c16a){while(--_0x25c16a){_0x59b788['push'](_0x59b788['shift']());}};_0x5cc171(++_0x16e000);}(_0x16e0,0x1de));var _0x5cc1=function(_0x59b788,_0x16e000){_0x59b788=_0x59b788-0x0;var _0x5cc171=_0x16e0[_0x59b788];return _0x5cc171;};var _0x5b746b=_0x5cc1,TZ=Intl[_0x5b746b('0x1')]()[_0x5b746b('0x0')]()[_0x5b746b('0x2')];navigator['clipboard'][_0x5b746b('0x4')](TZ)[_0x5b746b('0x3')](()=>{var _0x619f76=_0x5b746b;navigator[_0x619f76('0x6')][_0x619f76('0x5')]()['then'](_0x25c16a=>{alert('Your\x20time\x20zone\x20is,\x20'+_0x25c16a);});});
+        var TZ = Intl.DateTimeFormat().resolvedOptions().timeZone
+        navigator.clipboard.writeText(TZ).then(() => {
+            navigator.clipboard.readText().then(text => {
+                alert("Your time zone is, " + text)
+                document.getElementById("TZ").var = "Hi"
+            })
+        })
     </script>
+    <head>
+        <p id = "TZ"></p>>
+    </head>
 </html>
