--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-    <head>
+    <body>
         <b>Hello! Please allow access to the clipboard, and we'll copy the timezone for you!</b>
         <h1 id = "TZ">Loading...</h1>
-    </head>
+    </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script>
         var TZ = Intl.DateTimeFormat().resolvedOptions().timeZone
